Landng page changes

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -58,26 +58,59 @@
         </li>
     </ul>
 </div>
-
-
-<div class="btn-group btn-group-justified btn-group-lg top-buffer" role="tablist">
-    <div class="btn-group" role="presentation">
-        <button type="button" class="btn btn-primary" data-target="#popular" aria-controls="popular" role="tab" data-toggle="tab">Most Popular</button>
-    </div>
-    <div class="btn-group" role="presentation">
-        <button type="button" class="btn btn-primary" data-target="#latest" aria-controls="latest"  data-toggle="tab" role="tab">Latest Releases</button>
-    </div>
-    <div class="btn-group" role="presentation">
-        <button type="button" class="btn btn-primary" data-target="#grossing" aria-controls="grossing" role="tab" data-toggle="tab" data-role="presentation">Highest Grossing</button>
-    </div>
-</div>
-
-
-<div class="tab-content">
-    <div role="tabpanel" class="tab-pane active" id="popular">
+    <div class="container"></div>
+    <div role="tabpanel" class="tab-pane active col-md-4" id="popular">
         <div class="page-header"><h3>Most Popular</h3></div>
 
-        <ul class="list-group" (load)="findHighestGrossing()">
+        <ul class="list-group">
+            <li *ngFor="let movie of movies2" class="list-group-item ">
+
+                <div class="media-left media-middle">
+                    <a href="https://www.themoviedb.org/movie/{{movie.id}}" target="_blank">
+                        <img src="https://image.tmdb.org/t/p/w500/{{movie.poster_path}}" width="50px" alt="View on TMdB"/>
+                    </a>
+                </div>
+                <div class="media-body">
+                    <span class="pull-right"> {{movie.vote_average}}/10</span>
+                    <h2 class="media-heading">{{movie.title}} ({{movie.release_date | date: "yyyy"}})</h2>
+                    {{movie.overview}}
+
+
+
+                </div>
+
+            </li>
+        </ul>
+    </div>
+
+    <div role="tabpanel" class="tab-pane active col-md-4" id="latest">
+        <div class="page-header"><h3>Latest and upcoming</h3></div>
+
+        <ul class="list-group">
+            <li *ngFor="let movie of movies3" class="list-group-item ">
+
+                <div class="media-left media-middle">
+                    <a href="https://www.themoviedb.org/movie/{{movie.id}}" target="_blank">
+                        <img src="https://image.tmdb.org/t/p/w500/{{movie.poster_path}}" width="50px" alt="View on TMdB"/>
+                    </a>
+                </div>
+                <div class="media-body">
+                    <span class="pull-right"> {{movie.vote_average}}/10</span>
+                    <h2 class="media-heading">{{movie.title}} ({{movie.release_date | date: "yyyy"}})</h2>
+                    {{movie.overview}}
+
+
+
+                </div>
+
+            </li>
+        </ul>
+    </div>
+
+    <div role="tabpanel" class="tab-pane active col-md-4" id="grossing">
+        <div class="page-header"><h3>Highest Grossing</h3></div>
+
+        <ul class="list-group">
             <li *ngFor="let movie of movies1" class="list-group-item ">
 
                 <div class="media-left media-middle">
@@ -98,4 +131,4 @@
         </ul>
     </div>
 
-</div>
+
