--- a/src/assets/styles_in.css
+++ b/src/assets/styles_in.css
@@ -169,3 +169,10 @@ ul
 {
   margin-top: 10px;
 }
+
+.row-eq-height {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display:         flex;
+}
