--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -6,6 +6,7 @@
 
 
 <div class="container">
+    <div class="col-md-6">
     <h1>Manage Users</h1>
 
     <ul class="list-group">
@@ -88,3 +89,40 @@
 
         </li>
     </ul>
+    </div>
+
+
+    <div class="col-md-6">
+        <h1>Manage Reviews</h1>
+
+        <ul class="list-group">
+            <li class="list-group-item list-header">
+                <div class="row">
+                    <div class="col-xs-6">
+                        <label for="email">Owner Id</label>
+                    </div>
+                    <div class="col-xs-4">
+                        <label for="firstname">Review</label>
+                    </div>
+                    <div class="col-xs-2">
+
+                    </div>
+                </div>
+            <li *ngFor="let review of allReviews"  class="list-group-item">
+                <div class="row">
+                    <div class="col-xs-6">
+                        <a [routerLink]="['/userprofile',review.ownerId]">{{review.ownerId}}</a>
+                    </div>
+                    <div class="col-xs-4">
+                        {{review.review}}
+                    </div>
+                    <div class="col-xs-2">
+                    <span (click)="deleteReview(review._id)"
+                          class="glyphicon glyphicon-remove red-color pull-right"></span>
+                    </div>
+                </div>
+
+            </li>
+        </ul>
+    </div>
+    </div>
