--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -53,6 +53,8 @@
           <option value="" disabled selected hidden>Select role</option>
           <option value="Fan">Fan</option>
           <option value="Critic">Critic</option>
+          <option value="admin">admin</option>
+          <option value="moderator">moderator</option>
       </select>
     <button class="btn btn-primary btn-block bottom-buffer" type="submit" [disabled]="!f.valid">Register</button>
     <button class="btn btn-danger btn-block bottom-buffer  "
