Some UI changes

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -41,7 +41,7 @@
 <div class="input-group input-group-lg">
     <input type="text" [(ngModel)]="title" class="form-control" placeholder="Search movies by title">
     <span class="input-group-btn">
-                <a class="btn btn-warning" type="button" (click)="searchMovies()"><i class="fa fa-search" aria-hidden="true"></i> Search</a>
+                <button class="btn btn-warning" type="submit" (click)="searchMovies()"><i class="fa fa-search" aria-hidden="true"></i> Search</button>
             </span>
 </div>
 
