--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,9 +1,13 @@
-
+<hr>
+<div class="with-bg-image">
 <div class="container top-margin aligned">
   <div class="col-md-12 text-center">
-    <a class="btn-primary btn" href="https://github.com/dishantkapadiya2694/webdev-project-Dishant-Vinayak">Project Github</a>
-    <a class="btn-success btn" href="https://webdev-project-dishant-vinayak.herokuapp.com">Project Link</a>
-    <a class="btn-info btn" [routerLink]="['/home']">Project Home Page</a>
+    <a class="btn-primary btn" href="https://github.com/dishantkapadiya2694/webdev-project-Dishant-Vinayak">
+      <span class="glyphicon glyphicon-file"></span> &nbsp;Project Github</a>
+    <a class="btn-success btn" href="https://webdev-project-dishant-vinayak.herokuapp.com">
+      <span class="glyphicon glyphicon-cloud"></span> &nbsp;Project Link</a>
+    <a class="btn-info btn" [routerLink]="['/home']">
+      <span class="glyphicon glyphicon-home"></span> &nbsp;Project Home Page</a>
   </div>
 </div>
 
@@ -14,9 +18,10 @@
     </div>
     <div class="top-buffer">
       <a class="btn btn-primary" href="https://github.com/dishantkapadiya2694/webdev-Kapadiya-Dishant/releases">
-        Link to Github Assignments
+        <span class="glyphicon glyphicon-file"></span> &nbsp; Link to Github Assignments
       </a>
-      <a class="btn btn-success" href="https://webdev-kapadiya-dishant.herokuapp.com/login">Link to Heroku Assignments
+      <a class="btn btn-success" href="https://webdev-kapadiya-dishant.herokuapp.com/login">
+        <span class="glyphicon glyphicon-cloud"></span> &nbsp;Link to Heroku Assignments
       </a>
     </div>
   </div>
@@ -27,9 +32,12 @@
     </div>
     <div class="top-buffer">
       <a class="btn btn-primary text-center" href="https://github.com/vinayakshamnani/webdev-shamnani-vinayak/releases">
-        Link to Github Assignments
+        <span class="glyphicon glyphicon-file"></span> &nbsp;Link to Github Assignments
       </a>
-      <a class="btn btn-success text-center" href="https://webdev-shamnani-vinayak.herokuapp.com/">Link to Heroku Assignments</a>
+      <a class="btn btn-success text-center" href="https://webdev-shamnani-vinayak.herokuapp.com/">
+        <span class="glyphicon glyphicon-cloud"></span> &nbsp;Link to Heroku Assignments</a>
     </div>
   </div>
 </div>
+</div>
+<hr>
