--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,25 +1,43 @@
-<h1>
+<div class="container-fluid custom-center-container">
+
+    <nav class="navbar navbar-fixed-top navbar-custom">
+        <div class="container-fluid">
+            <a class="navbar-brand pull-left" [routerLink]="['/home']">
+                <span
+                        class="glyphicon glyphicon-home pull-left glyph-color">
+
+                </span>
+            </a>
+            <a class="navbar-brand pull-right" (click)="logout()" [routerLink]="['/home']">
+                <span
+                        class="glyphicon glyphicon-log-out pull-right glyph-color" (click)="logout()"> Logout</span>
+
+            </a>
+        </div>
+    </nav>
+</div>
+
+<h2 class="top-margin">
   Welcome to Admin Page
-</h1>
+</h2>
 
 
-<div class="container">
     <div class="col-md-6">
     <h1>Manage Users</h1>
 
     <ul class="list-group">
         <li class="list-group-item list-header">
             <div class="row">
-                <div class="col-xs-3">
+                <div class="col-xs-4">
                     <label for="email">Email</label>
                 </div>
-                <div class="col-xs-3">
+                <div class="col-xs-2">
                     <label for="firstname">First Name</label>
                 </div>
-                <div class="col-xs-3">
-                    <label for="lastname">Last Name</label>
+                <div class="col-xs-2">
+                    <label for="lastName">Last Name</label>
                 </div>
-                <div class="col-xs-1">
+                <div class="col-xs-2">
                     <label for="role">Role</label>
                 </div>
                 <div class="col-xs-1">
@@ -30,22 +48,22 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-3">
+                <div class="col-xs-4">
                     <input  [(ngModel)]="email"
                            id="email"
                            class="form-control" />
                 </div>
-                <div class="col-xs-3">
+                <div class="col-xs-2">
                     <input  [(ngModel)]="firstName"
                            id="firstname"
                            class="form-control" />
                 </div>
-                <div class="col-xs-3">
+                <div class="col-xs-2">
                     <input  [(ngModel)]="lastName"
-                           id="lastname"
-                           class="form-control" />
+                            id="lastName"
+                            class="form-control" />
                 </div>
-                <div class="col-xs-1">
+                <div class="col-xs-2">
                     <input  [(ngModel)]="role"
                            id="role"
                            class="form-control" />
@@ -63,16 +81,16 @@
         </li>
         <li *ngFor="let user of users"  class="list-group-item">
             <div class="row">
-                <div class="col-xs-3">
+                <div class="col-xs-4">
                     {{user.email}}
                 </div>
-                <div class="col-xs-3">
+                <div class="col-xs-2">
                     {{user.firstName}}
                 </div>
-                <div class="col-xs-3">
+                <div class="col-xs-2">
                     {{user.lastName}}
                 </div>
-                <div class="col-xs-1">
+                <div class="col-xs-2">
                     {{user.role}}
                 </div>
                 <div class="col-xs-1">
@@ -122,5 +140,4 @@
 
             </li>
         </ul>
-    </div>
     </div>
