--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -4,6 +4,8 @@
   <div class="col-md-12 text-center">
     <a class="btn-primary btn" href="https://github.com/dishantkapadiya2694/webdev-project-Dishant-Vinayak">
       <span class="glyphicon glyphicon-file"></span> &nbsp;Project Github</a>
+    <a class="btn btn-warning" href="https://github.com/dishantkapadiya2694/webdev-project-Dishant-Vinayak/wiki">
+    <span class="glyphicon glyphicon-bookmark"></span> &nbsp; Project Wiki</a>
     <a class="btn-success btn" href="https://webdev-project-dishant-vinayak.herokuapp.com">
       <span class="glyphicon glyphicon-cloud"></span> &nbsp;Project Link</a>
     <a class="btn-info btn" [routerLink]="['/home']">
@@ -12,8 +14,8 @@
 </div>
 
 <div class="container top-margin aligned">
-  <div class = "col-md-6 aligned">
-    <div class="container">
+  <div class = "col-md-6 ">
+    <div class="container with-left-margin ">
       <img src = "../../../assets/Dishant.jpeg" class="margined" width = "300" height="300">
     </div>
     <div class="top-buffer">
@@ -26,8 +28,8 @@
     </div>
   </div>
 
-  <div class = "col-md-6 aligned">
-    <div class="container">
+  <div class = "col-md-6 ">
+    <div class="container with-left-margin">
       <img src = "../../../assets/Vinayak.JPG" class="margined" width = "300" height="300">
     </div>
     <div class="top-buffer">
