--- a/src/app/components/userprofile/userprofile.component.html
+++ b/src/app/components/userprofile/userprofile.component.html
@@ -20,6 +20,11 @@
 
                 </span>
       </a>
+      <a class="navbar-brand pull-right" [routerLink]="['/profile']">
+                <span
+                        class="glyphicon glyphicon-user pull-right glyph-color"> Edit Profile</span>
+
+      </a>
     </div>
   </nav>
 </div>
