--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -6,7 +6,7 @@
 
     <h1>Login</h1>
     <form #f="ngForm">
-        <input placeholder="email"
+        <input placeholder="username"
                name="email"
                type="text"
                class="form-control bottom-buffer"
