--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -9,7 +9,7 @@
   </div>
   <h1>User Registration</h1>
   <form (ngSubmit) = "register()" #f="ngForm">
-    <input placeholder="Email"
+    <input placeholder="username"
            name="email"
            type="text"
            class="form-control bottom-buffer"
@@ -53,8 +53,6 @@
           <option value="" disabled selected hidden>Select role</option>
           <option value="Fan">Fan</option>
           <option value="Critic">Critic</option>
-          <option value="admin">admin</option>
-          <option value="moderator">moderator</option>
       </select>
     <button class="btn btn-primary btn-block bottom-buffer" type="submit" [disabled]="!f.valid">Register</button>
     <button class="btn btn-danger btn-block bottom-buffer  "
